Use 'kB' instead of 'KB'

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">NetSpeed</string>
 
-    <string name="kbps">KB/s</string>
-    <string name="mbps">MB/s</string>
+    <string name="kBps">kB/s</string>
+    <string name="MBps">MB/s</string>
     <string name="plus99">99+</string>
     <string name="dash">-</string>
 </resources>
