Revert "Fix problem with Oreo"
This reverts commit 0251a6dd4c52645685d90612c5553f30065c9841.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">NetSpeed Indicator</string>
+    <string name="app_name">NetSpeed</string>
 
     <string name="kBps">kB/s</string>
     <string name="MBps">MB/s</string>
