Move icons from drawable to drawable-anydpi, refactor

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 
     <string name="plus99">99+</string>
     <string name="dash">-</string>
+
+    <string name="notification_icon">Notification Icon</string>
+    <string name="settings_button">Settings Button</string>
 </resources>
