Add option to select which speed to show in the indicator icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,11 @@
     <string name="pref_notification_priority_default">Normal</string>
     <string name="pref_notification_priority_low">Low</string>
 
+    <string name="pref_indicator_speed_to_show">Speed to show in status bar icon</string>
+    <string name="pref_indicator_speed_total">Total speed</string>
+    <string name="pref_indicator_speed_down">Download speed</string>
+    <string name="pref_indicator_speed_up">Upload speed</string>
+
     <string name="pref_lockscreen_notification_title">Lockscreen notification</string>
     <string name="pref_lockscreen_notification_summary_on">Notification is visible on lockscreen</string>
     <string name="pref_lockscreen_notification_summary_off">Notification is hidden from lockscreen</string>
