Menu in settings activity, with rate app option and about page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,10 @@
     <string name="plus99">99+</string>
     <string name="dash">-</string>
 
+    <!-- Option menu -->
+    <string name="rate_app">Rate this app</string>
+    <string name="about">About</string>
+
     <!-- Notification Layout -->
     <string name="notif_notification_icon">Notification Icon</string>
     <string name="notif_settings_button">Settings Button</string>
